Fixed that the messages were not full width on iOS Safari + a horisontal scrollbar appeared when showing messages + fixed a piece of javascript

--- a/dev/scss/components/_dialog.scss
+++ b/dev/scss/components/_dialog.scss
@@ -3,6 +3,7 @@
   height: 100vh;
   position: fixed;
   overflow-y: scroll;
+  overflow-x: hidden;
   top: 0;
   left: 0;
   z-index: $zindex-dialog;
@@ -17,6 +18,7 @@
   &_inner {
     position: absolute;
     width: 100%;
+    max-width: 100%; // iOS Safari
     margin-top: 10vh;
     display: flex;
     align-items: center;
