--- a/style.css
+++ b/style.css
@@ -5795,6 +5795,7 @@ textarea:focus {
   height: 100vh;
   position: fixed;
   overflow-y: scroll;
+  overflow-x: hidden;
   top: 0;
   left: 0;
   z-index: 1005;
@@ -5818,6 +5819,7 @@ textarea:focus {
 .dialog_inner {
   position: absolute;
   width: 100%;
+  max-width: 100%;
   margin-top: 10vh;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -6644,6 +6646,7 @@ input.input-error {
   font-size: 14px;
   font-weight: 400;
   text-align: center;
+  min-width: 100vw;
   width: calc( 100vw + 2px);
   padding: 22px 32px;
   -webkit-transform: translate3d(0, -100px, 0);
